tests/specs/import_equals.txt
# mod.ts
declare module Test {
  export interface Options {
  }
}

import Options = Test.Options;

export { Options };

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   export interface Options {
  |   ^

# output.txt
Defined in file:///mod.ts:1:3

interface Options



# output.json
[
  {
    "name": "Options",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 1,
          "col": 2,
          "byteIndex": 24
        },
        "declarationKind": "export",
        "kind": "interface",
        "def": {
          "extends": [],
          "constructors": [],
          "methods": [],
          "properties": [],
          "callSignatures": [],
          "indexSignatures": [],
          "typeParams": []
        }
      }
    ]
  }
]
